--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./JS/script.js" defer></script>
     <link rel="stylesheet" href="./Css/style.css" />
-    <title>Document</title>
+    <title>DOM</title>
 </head>
 <body>
     
